# Solanum

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  Solanum.doap  build.rs  code-of-conduct.md  io.gnome.Solanum.json  meson.build  org.gnome.Solanum.Devel.json  org.gnome.Solanum.json
build-aux/: cargo.sh
data/: io.gnome.Solanum.appdata.xml.in  io.gnome.Solanum.desktop.in.in  io.gnome.Solanum.gschema.xml  meson.build  org.gnome.Solanum.appdata.xml.in  org.gnome.Solanum.appdata.xml.in.in  org.gnome.Solanum.desktop.in.in  org.gnome.Solanum.gschema.xml  org.gnome.Solanum.metainfo.xml.in.in  solanum.gresource.xml  solanum.gresource.xml.in
data/gtk/: help-overlay.blp  help-overlay.ui
data/icons/: meson.build
data/ui/: menu.ui  preferences-window.blp  preferences-window.ui  style.css  window.blp  window.ui
po/: LINGUAS  POTFILES  POTFILES.in  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  ka.po  kk.po  ko.po  kw.po  meson.build  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+9 more)
solanum/: Cargo.toml
solanum/src/: app.rs  config.rs.in  i18n.rs  main.rs  meson.build  templating.rs  timer.rs  window.rs
src/: app.rs  config.rs  i18n.rs  macros.rs  main.rs  meson.build  preferences_window.rs  templating.rs  timer.rs  window.rs
subprojects/: blueprint-compiler.wrap
template-macros/: Cargo.toml
template-macros/src/: composite_template_derive.rs  lib.rs  meson.build  util.rs
