[package]
name = "solanum"
version = "4.0.0"
edition = "2021"

[dependencies]
once_cell = "1.4.0"
regex = "1.3.4"
gtk-macros = "0.3.0"
glib-macros = "0.17"
gstreamer = "0.21"
gstreamer-play = "0.21"
libadwaita = { version = "0.5.3", features = ["v1_4"] }

[dependencies.gtk]
version = "0.7"
package ="gtk4"

[dependencies.gettext-rs]
version = "0.7.0"
features = ["gettext-system"]
