[package]
name = "solanum"
version = "6.0.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
regex = "1.11"
glib-macros = "0.19"
gstreamer = "0.23"
gstreamer-play = "0.23"
libadwaita = { version = "0.7", features = ["v1_5"] }

[dependencies.gtk]
version = "0.9"
package ="gtk4"

[dependencies.gettext-rs]
version = "0.7.0"
features = ["gettext-system"]
