[package]
name = "solanum"
version = "2.0.0"
edition = "2018"
workspace = "../"

[dependencies]
once_cell = "1.4.0"
regex = "1.3.4"
gtk-macros = "0.2.0"
gstreamer = "0.16.3"
gstreamer-player = "0.16.3"
field-offset = "0.3.2"

[dependencies.gtk4]
git = "https://github.com/gtk-rs/gtk4"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/sys"
package = "gtk4-sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"
package = "gobject-sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"
package = "glib-sys"

[dependencies.gdk4]
git = "https://github.com/gtk-rs/gdk4"

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"
features = ["v2_60"]

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
features = ["v2_60"]

[dependencies.gettext-rs]
version = "0.4.4"
features = ["gettext-system"]

[dependencies.libhandy]
git = "https://gitlab.gnome.org/bilelmoussaoui/libhandy4-rs"
package = "libhandy4"

[dependencies.pango]
git = "https://github.com/gtk-rs/pango"
features = ["v1_44"]

[dependencies.template-macros]
path = "../template-macros/"
